--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -77,7 +77,7 @@
             </section>
         </div>
     </main>
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
