--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header class="container">
-        <h1>Емкость уникальныйх пользователей</h1>
+        <h1>Емкость уникальных пользователей</h1>
     </header>
 
     <main>
