--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <!-- Кнопка -->
             <button class="button calculate">Рассчитать емкость</button>
-            <button class="button reset">Обновить</button>
+            <button class="button reset">Сбросить</button>
 
         </div>
 
